<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
		android:defaultValue="@string/pref_location_default"
		android:key="@string/pref_location_key"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:title="@string/pref_location_label"/>
	<ListPreference
		android:defaultValue="@string/pref_units_metric"
		android:entries="@array/temperature_units"
		android:entryValues="@array/temperature_units"
		android:key="@string/pref_units_key"
		android:title="@string/pref_units_label"/>

	<CheckBoxPreference
		android:defaultValue="@string/pref_enable_notifications_default"
		android:key="@string/pref_enable_notifications_key"
		android:summaryOff="@string/pref_enable_notifications_false"
		android:summaryOn="@string/pref_enable_notifications_true"
		android:title="@string/pref_enable_notifications_label"/>

</PreferenceScreen>