<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/detail_additional_pane"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/detail_accent_pane_background"
	android:paddingBottom="@dimen/detail_view_extra_padding"
	android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
	android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
	android:paddingRight="@dimen/forecast_detail_horizontal_padding"
	android:paddingStart="@dimen/forecast_detail_horizontal_padding"
	android:paddingTop="@dimen/detail_view_extra_padding"
	app:columnCount="2"
	tools:showIn="@layout/fragment_detail">

	<TextView
		android:id="@+id/detail_humidity_label_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:fontFamily="sans-serif"
		android:gravity="center_vertical"
		android:text="@string/humidity"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		android:textColor="@color/detail_accent_label"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"/>

	<TextView
		android:id="@+id/detail_humidity_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:gravity="center_vertical"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		android:textColor="@android:color/white"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"
		tools:text="38%"/>

	<TextView
		android:id="@+id/detail_pressure_label_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:fontFamily="sans-serif"
		android:gravity="center_vertical"
		android:text="@string/pressure"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		android:textColor="@color/detail_accent_label"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"/>


	<TextView
		android:id="@+id/detail_pressure_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:gravity="center_vertical"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		android:textColor="@android:color/white"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"
		tools:text="995 hPa"/>

	<TextView
		android:id="@+id/detail_wind_label_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:fontFamily="sans-serif"
		android:gravity="center_vertical"
		android:text="@string/wind"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		android:textColor="@color/detail_accent_label"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"/>


	<TextView
		android:id="@+id/detail_wind_textview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:gravity="center_vertical"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"
		android:textColor="@android:color/white"
		app:layout_columnWeight="1"
		app:layout_gravity="fill_horizontal"
		app:layout_rowWeight="1"
		tools:text="4km/h NW"/>
</android.support.v7.widget.GridLayout>