<!-- Master layout. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="16dp">

		<LinearLayout
			android:layout_width="180dp"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<!-- Header: Day, Date -->
			<TextView
				android:id="@+id/detail_day_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textColor="@android:color/black"
				android:textSize="24sp"
				tools:text="Today"/>

			<TextView
				android:id="@+id/detail_date_textview"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textColor="@color/text_color_light"
				android:textSize="16sp"
				tools:text="June 18"/>
		</LinearLayout>
		<!-- Main content: high, low, art, weather state -->

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">

			<TextView
				android:id="@+id/detail_high_textview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif"
				android:textColor="@android:color/black"
				android:textSize="96sp"
				tools:text="22°"/>

			<TextView
				android:id="@+id/detail_low_textview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif"
				android:textColor="@color/text_color_light"
				android:textSize="48sp"
				tools:text="12°"/>

			<TextView
				android:id="@+id/detail_humidity_textview"
				style="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				tools:text="@string/format_humidity"/>

			<TextView
				android:id="@+id/detail_wind_textview"
				style="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				tools:text="@string/format_pressure"/>

			<TextView
				android:id="@+id/detail_pressure_textview"
				style="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="4dp"
				tools:text="@string/format_wind_kmh"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/detail_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:src="@drawable/art_clear"/>

			<TextView
				android:id="@+id/detail_forecast_textview"
				style="@style/Base.TextAppearance.AppCompat.Large"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="sans-serif-condensed"
				android:textColor="@color/text_color_light"
				tools:text="Clear"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>